# My-NYT

./: .gitignore  CUSTOMIZATION.md  README.md  pyproject.toml  requirements.txt
examples/: customization.py  example.py  standard.py  survive_wordle.py  wordgame.py  wordle_example.py  wordle_streak.py
mynews/: util.py
mynyt/: core.py
